# moon-chess

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  render.yaml
backend/: README.md
backend/app/: __init__.py  game.py  main.py  models.py  protection.py
backend/app/ai/: __init__.py  explanations.py  heuristics.py  models.py  player.py  solver.py
backend/tests/: test_ai.py  test_game_rules.py  test_protection.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts  router.ts
frontend/src/api/: client.ts
frontend/src/components/: AiPanel.vue  AnalysisPanel.vue  ControlPanel.vue  GameBoard.vue  GameCell.vue  GameGuideDialog.vue  HistoryList.vue  ResponsiveDisclosure.vue
frontend/src/components/game/: GameHistoryList.vue  GameSettingsCard.vue  GameStatusCard.vue  LunarOrbitAnalysisCard.vue
frontend/src/i18n/: errorMap.ts  index.ts  locale.ts
frontend/src/i18n/locales/: en-US.ts  zh-CN.ts
frontend/src/styles/: global.css
frontend/src/types/: display.ts  game.ts
frontend/src/utils/: playerDisplay.ts  roman.ts  useElementHeightCssVar.ts  useGamePreferences.ts
frontend/src/views/: AiBattleView.vue  ClassicGameView.vue  LunarOrbitView.vue  MoonHallView.vue  SilverMoonTeaPartyView.vue
scripts/: solve_moon_chess.py
